eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "ae6e633209e05493baaf454a2ff40f4f-1971808888.ap-northeast-1.elb.amazonaws.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bank-api-service
            port:
              number: 80
  tls:
  - hosts:
    - ae6e633209e05493baaf454a2ff40f4f-1971808888.ap-northeast-1.elb.amazonaws.com
    secretName: bank-api-certificate
